add update and create in users endpoint, relacated encryption middleware, ready upload images
